# libplanc

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CMakePresets.json  license.md  outbench.csv  pyproject.toml  test.mtx  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_wheels.yaml  release_pypi.yaml
bench/: CMakeLists.txt  LICENSE.md  README.md  planc_bench.cpp  planc_bench.hpp
bench/bench_in/: frontal_100k.h5.dense.mtx  frontal_10k.h5.dense.mtx  frontal_200k.h5.dense.mtx  frontal_250k.h5.dense.mtx  frontal_50k.h5.dense.mtx  outbench.csv  outbench_1.csv  outbench_2.csv
cmake/: CompilerFlags.cmake  DetectBLAS.cmake  DetectHighFive.cmake  DetectOMP.cmake  FindHWLOC.cmake  FindR.cmake  PythonDefines.cmake  RcppDefines.cmake
common/: bm.hpp  config.h  data.cpp  data.hpp  detect_blas.c  detect_blas.h  distutils.h  distutils.hpp  hw_detect.c  hw_detect.h  inmf.hpp  ncpfactors.hpp  nmf.hpp  npyio.hpp  ntf_utils.hpp  parsecommandline.h  parsecommandline.hpp  parseutils.cpp  parseutils.hpp  plancopts.h  progressWrapper.cpp  progressWrapper.h  tensor.hpp  utils.cc  utils.cpp  utils.h  utils.hpp
common/cmake_aux/: NMFLIB_FindARMA.cmake
dimtree/: ddt.hpp  ddttensor.h  ddttensor.hpp  dimtrees.h  dimtrees.hpp
distnmf/: aunmf.hpp  distals.hpp  distanlsbpp.hpp  distaoadmm.hpp  distgnsymnmf.hpp  disthals.hpp  distio.hpp  distmu.hpp  distnmf.cpp  distnmf.hpp  distnmf1D.hpp  distnmftime.hpp  distr2.hpp  mpicomm.hpp  naiveanlsbpp.hpp
distntf/: distauntf.hpp  distntf.cpp  distntfanlsbpp.hpp  distntfaoadmm.hpp  distntfcpals.hpp  distntfhals.hpp  distntfio.hpp  distntfmpicomm.hpp  distntfmu.hpp  distntfnes.hpp  distntftime.hpp
hiernmf/: hiernmf.cpp  matutils.hpp  node.hpp
interfaces/: RcppPlanc.i  pybind_interface.cpp
nmf/: CMakeLists.txt  EmbeddedNMFDriver.hpp  NMFDriver.cpp  NMFDriver.hpp  SparseNMFDriver.cpp  SparseNMFDriver.hpp  aoadmm.hpp  bppinmf.hpp  bppnmf.cpp  bppnmf.hpp  gnsym.hpp  hals.hpp  inmf.cpp  inmf_types.inc  mu.hpp  nmf.cpp  nmf_cmd.cpp  nmf_lib.cpp  nmf_lib.hpp  nmf_lib.inl  nmf_types.inc  onlineinmf.hpp  uinmf.hpp
nnls/: SortBooleanMatrix.hpp  bppnnls.hpp  nnls.hpp  nnls_lib.cpp  nnls_lib.hpp  nnls_lib.inl
ntf/: auntf.hpp  mttkrp_test.cpp  ntf.cpp  ntfanlsbpp.hpp  ntfaoadmm.hpp  ntfhals.hpp  ntfmu.hpp  ntfnes.hpp
python/: README.md  casters.h  dense_casters.h  pointer_helpers.hpp  progressWrapper.h  pybind_interface.cpp  pybind_interface.hpp  sparse_casters.h  sparse_converters.h
python/tests/: test_nmf.py
